SONAR-17714 Drop types from ES requests